--- a/src/Web/Backoffice/Views/Shared/_Layout.cshtml
+++ b/src/Web/Backoffice/Views/Shared/_Layout.cshtml
@@ -26,11 +26,15 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Event" asp-action="GetEvent">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Event" asp-action="GetEvent">Event</a>
                     </li>
                 </ul>
             </div>
         </div>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <a class="btn btn-dark glyphicon glyphicon-log-out" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+        }
     </nav>
 </header>
 <div class="container">
